<resources>

    <string name="app_name">Video Player</string>
    <string name="general_error">Error</string>
    <string name="audio_pref_key_saved_search_history">pref_key_saved_search_history</string>
    <string name="audio_pref_key_clear_search_history">pref_key_clear_search_history</string>
    <string name="music_connection_error">Audio connection error, could not connect, please try again later</string>
    <string name="downloading">Downloading</string>
    <string name="music_downloader">Online Videos</string>
    <string name="audio_pref_key_download_format">pref_key_download_format</string>
    <string name="music_end_of_download">End of download</string>
    <string name="ds_download_failed">Download failed</string>
    <string name="ds_download_success">Download success</string>
    <string name="audio_pref_key_download_id">pref_key_download_id</string>
    <string name="ds_download_canceled">Download canceled</string>
    <string name="audio_pref_key_open_with_internal_player">pref_key_open_with_internal_player</string>
    <string name="open_file">Open file</string>
    <string name="copy_msg">URL Copied</string>
    <string name="download_text">Download reels,videos\nposts &amp; stories</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this file?</string>
    <string name="delete_dialog_title">Delete File</string>
    <string name="soundON">soundOn</string>
    <string name="vibrateON">vibrateOn</string>
    <string name="all_disclaimer">* Please obtain permission from the owner before reposting their content. Any unauthorized action is the sole responsibility of the user.</string>
    <string name="select_all">Select All</string>
    <string name="status_not_available">Status not available.</string>
    <string name="delete_alert">Are you sure , You want to delete selected files?</string>
    <string name="yes">Yes</string>
    <string name="delete_error">Couldn\'t delete some files</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="no">No</string>
    <string name="wapp">WhatsApp</string>
    <string name="wapp_permission">Click on this button and Allow permission to access your status</string>
    <string name="allow_permission">Allow storage permission to get all videos to enjoy!</string>
    <string name="allow_permission_title">Storage Permission</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="save">Save</string>
    <string name="save_error">Couldn\'t save some files</string>
    <string name="save_success">Status Saved Successfully</string>
    <string name="saved_success">Status saved successfully</string>
    <string name="recent_status">Recent Status</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="share">Share</string>
    <string name="enter_url">Search or Type URL</string>
    <string name="history">History</string>
    <string name="DEFAULT">Default</string>
    <string name="action_allow">Allow Permission</string>
    <string name="file_name">File Name:</string>
    <string name="video_duration">Duration:</string>
    <string name="video_size">Size:</string>
    <string name="video_path">File Path:</string>
    <string name="video_resolution">Resolution:</string>
    <string name="modify_date">Modify Date:</string>
    <string name="action_ok">Ok</string>
    <string name="no_url">No url</string>
    <string name="wbapp">WA Business</string>
    <string name="music_new_search_rec_holder">Click search button to find online video.</string>
    <string name="download_path_audio_key">download_path_audio</string>
    <string name="download_path_video_key">download_path</string>
    <string name="webview_init_error">WebView initialization error, please install or update the WebView package</string>
    <string name="webview_package_name">com.google.android.webview</string>
    <string name="no_search_history_available">No search history available</string>
    <string name="unable_to_connect_internet">Unable to connect to internet</string>
    <string name="an_error_occurred_try_again">An error has occurred, please try again later</string>
    <string name="keywords">Search Video</string>
    <string name="no_more_results">No more results</string>
    <string name="no_results_found">No results found</string>
    <string name="notification_channel_description">Notifications for App background and popup players</string>
    <string name="notification_channel_id">topdownloader</string>
    <string name="notification_channel_name">Top Downloader Notification</string>
    <string name="app_update_notification_channel_description">Notifications for new app version</string>
    <string name="app_update_notification_channel_id">downloaderAppUpdate</string>
    <string name="app_update_notification_channel_name">App Update Notification</string>
    <string name="default_resolution_key">default_resolution</string>
    <string name="default_resolution_value">360p</string>
    <string name="audio_m4a_key">audio_m4a</string>
    <string name="video_mp4_key">video_mp4</string>
    <string name="best_resolution_key">best_resolution</string>
    <string name="show_higher_resolutions_key">show_higher_resolutions</string>
    <string name="default_video_format_key">default_video_format</string>
    <string name="default_video_format_value">@string/video_mp4_key</string>
    <string name="video_3gp_key">video_3gp</string>
    <string name="audio_webm_key">audio_webm</string>
    <string name="video_webm_key">video_webm</string>
    <string name="limit_data_usage_none_key">limit_data_usage_none</string>
    <string name="limit_mobile_data_usage_key">limit_mobile_data_usage</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
</resources>