<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/tap_to_open"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/btn_wapp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/circle_background"
                    android:padding="@dimen/_7sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/g2560" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/wapp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_wapp_bus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/circle_background"
                    android:padding="@dimen/_7sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wa_business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/whatsapp_business"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
