<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/dialog_background"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Video Property"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:singleLine="true"
                        android:text="@string/file_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/video_duration"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/video_size"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/video_path"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoPath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/video_resolution"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoResolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/modify_date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videoModifyDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_corner_color_primary_1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_corner_color_primary"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/action_ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>