<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    android:orientation="vertical">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionLay">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/WorkImageGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/sAccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/wapp_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_round_corner_color_primary"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/allow_storage_access"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_round_corner_color_primary"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/selectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:button="@drawable/custom_checkbox"
                android:padding="@dimen/_5sdp"
                android:scaleX="1"
                android:fontFamily="@font/poppins_regular"
                android:scaleY="1"
                android:text="@string/select_all"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/downloadIV"
            android:layout_width="1dp"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/background_submit_"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/ic_save_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="Save"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteIV"
            android:layout_width="1dp"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/background_submit_"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/his_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="Delete"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/vid_player_loader_lay" />

    <include layout="@layout/vid_player_empty_lay" />

    <ProgressBar
        android:id="@+id/loaddata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/purple_500"
        android:layout_centerInParent="true"/>

</RelativeLayout>
